--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "Sam Sycamore",
   "license": "MIT",
   "dependencies": {
+    "angular-recaptcha": "^2.5.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "mongodb": "^2.1.14"
+    "mongodb": "^2.1.14",
+    "recaptcha2": "^1.0.8"
   },
   "devDependencies": {
     "mongo-express": "^0.30.42"
