--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "Sam Sycamore",
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.3",
     "angular-recaptcha": "^2.5.0",
+    "angular-route": "^1.5.3",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
@@ -22,6 +25,7 @@
     "recaptcha2": "^1.0.8"
   },
   "devDependencies": {
-    "mongo-express": "^0.30.42"
+    "mongo-express": "^0.30.42",
+    "webpack": "^1.12.14"
   }
 }
